# emc_simulator

./: CMakeLists.txt  package.xml  rosdoc.yaml
config/: default.rviz  simbot_config.yaml
data/: config.json  defaultconfig.json  heightmap.pgm  heightmap.stl  heightmap_correct.pgm  heightmap_correct.stl  heightmap_correct2.pgm  heightmap_maze_legacy.pgm  heightmap_maze_legacy.yaml  heightmap_metadata.yaml  heightmaptest_incorrect.pgm  heightmaptest_incorrect.stl  heightmaptest_incorrect2.pgm  heightmaptest_incorrect3.pgm  hospitalconfig.json  hospitalconfig_easy.json  hospitalconfig_taco.json  localizationconfig.json
launch/: sim.launch  viz.launch
rviz/: config.rviz
scripts/: simulator  simulator.py  teleop.py
src/: bumper.cpp  bumper.h  door.h  heightmap.cpp  heightmap.h  jsonconfig.h  lrf.cpp  lrf.h  main.cpp  moving_object.cpp  moving_object.h  robot.cpp  robot.h  testcase.cpp  virtualbase.cpp  virtualbase.h  visualization.cpp  visualization.h  world.cpp  world.h
urdf/: rosbot.urdf
