<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emc_simulator</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geolib2</depend>
  <depend>tf2</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>

  <exec_depend>rospy</exec_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
